# smlnj

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  shell.nix
.obs/: workflows.yml
package/debian/: changelog  control  copyright
runtime/: CMakeLists.txt
runtime/c-libs/: CMakeLists.txt
runtime/c-libs/codegen/: CMakeLists.txt
runtime/c-libs/dl/: CMakeLists.txt
runtime/c-libs/posix-error/: CMakeLists.txt
runtime/c-libs/posix-filesys/: CMakeLists.txt
runtime/c-libs/posix-io/: CMakeLists.txt
runtime/c-libs/posix-os/: CMakeLists.txt
runtime/c-libs/posix-procenv/: CMakeLists.txt
runtime/c-libs/posix-process/: CMakeLists.txt
runtime/c-libs/posix-signal/: CMakeLists.txt
runtime/c-libs/posix-sysdb/: CMakeLists.txt
runtime/c-libs/posix-tty/: CMakeLists.txt
runtime/c-libs/smlnj-date/: CMakeLists.txt
runtime/c-libs/smlnj-math/: CMakeLists.txt
runtime/c-libs/smlnj-prof/: CMakeLists.txt
runtime/c-libs/smlnj-runtime/: CMakeLists.txt
runtime/c-libs/smlnj-signals/: CMakeLists.txt
runtime/c-libs/smlnj-sockets/: CMakeLists.txt
runtime/c-libs/smlnj-time/: CMakeLists.txt
runtime/config/: CMakeLists.txt  gen-unix-sigtbl.c  mlstate-offsets.h.in
runtime/gc/: CMakeLists.txt
runtime/include/: bibop.h  ml-sizes.h.in
runtime/kernel/: CMakeLists.txt
runtime/mach-dep/: AMD64.prim.c  CMakeLists.txt
runtime/memory/: CMakeLists.txt
runtime/objs/: makefile
