cmake_minimum_required(VERSION 3.30 FATAL_ERROR)
project(
    "SMLNJ"
    VERSION "2026.2"
    HOMEPAGE_URL "https://smlnj.org"
    LANGUAGES C CXX ASM
)

include(FetchContent)
include(GNUInstallDirs)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    set(LLVM_TARGETS_TO_BUILD X86)
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    set(LLVM_TARGETS_TO_BUILD AArch64)
else()
    message(FATAL_ERROR "Unsupported architecture ${CMAKE_SYSTEM_PROCESSOR}")
endif()

set(SMLNJ_GENERATE_CONFIG_HEADER ON)

# LLVM options
set(LLVM_ENABLE_DUMP ON)

set(LLVM_ENABLE_BINDINGS OFF)
set(LLVM_ENABLE_LIBXML2 OFF)
set(LLVM_ENABLE_OCAMLDOC OFF)
set(LLVM_ENABLE_ZSTD OFF)
set(LLVM_INCLUDE_BENCHMARKS OFF)
set(LLVM_INCLUDE_DOCS OFF)
set(LLVM_INCLUDE_EXAMPLES OFF)
set(LLVM_INCLUDE_TESTS OFF)
set(LLVM_INCLUDE_UTILS OFF)
set(LLVM_TOOL_BUGPOINT_BUILD OFF)
set(LLVM_TOOL_BUGPOINT_PASSES_BUILD OFF)
set(LLVM_TOOL_DSYMUTIL_BUILD OFF)
set(LLVM_TOOL_GOLD_BUILD OFF)
set(LLVM_TOOL_LLI_BUILD OFF)
set(LLVM_TOOL_LLVM_AR_BUILD OFF)
set(LLVM_TOOL_LLVM_AS_BUILD OFF)
set(LLVM_TOOL_LLVM_AS_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_BCANALYZER_BUILD OFF)
set(LLVM_TOOL_LLVM_CAT_BUILD OFF)
set(LLVM_TOOL_LLVM_CFI_VERIFY_BUILD OFF)
set(LLVM_TOOL_LLVM_CGDATA_BUILD OFF)
set(LLVM_TOOL_LLVM_COV_BUILD OFF)
set(LLVM_TOOL_LLVM_CTXPROF_UTIL_BUILD OFF)
set(LLVM_TOOL_LLVM_CVTRES_BUILD OFF)
set(LLVM_TOOL_LLVM_CXXDUMP_BUILD OFF)
set(LLVM_TOOL_LLVM_CXXFILT_BUILD OFF)
set(LLVM_TOOL_LLVM_CXXMAP_BUILD OFF)
set(LLVM_TOOL_LLVM_C_TEST_BUILD OFF)
set(LLVM_TOOL_LLVM_DEBUGINFO_ANALYZER_BUILD OFF)
set(LLVM_TOOL_LLVM_DEBUGINFOD_BUILD OFF)
set(LLVM_TOOL_LLVM_DEBUGINFOD_FIND_BUILD OFF)
set(LLVM_TOOL_LLVM_DIFF_BUILD OFF)
set(LLVM_TOOL_LLVM_DIS_BUILD OFF)
set(LLVM_TOOL_LLVM_DWARFDUMP_BUILD OFF)
set(LLVM_TOOL_LLVM_DWARFUTIL_BUILD OFF)
set(LLVM_TOOL_LLVM_DWP_BUILD OFF)
set(LLVM_TOOL_LLVM_EXEGESIS_BUILD OFF)
set(LLVM_TOOL_LLVM_EXTRACT_BUILD OFF)
set(LLVM_TOOL_LLVM_GSYMUTIL_BUILD OFF)
set(LLVM_TOOL_LLVM_IFS_BUILD OFF)
set(LLVM_TOOL_LLVM_ISEL_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_ITANIUM_DEMANGLE_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_JITLINK_BUILD OFF)
set(LLVM_TOOL_LLVM_JITLISTENER_BUILD OFF)
set(LLVM_TOOL_LLVM_LINK_BUILD OFF)
set(LLVM_TOOL_LLVM_LIPO_BUILD OFF)
set(LLVM_TOOL_LLVM_LTO2_BUILD OFF)
set(LLVM_TOOL_LLVM_LTO_BUILD OFF)
set(LLVM_TOOL_LLVM_MCA_BUILD OFF)
set(LLVM_TOOL_LLVM_MC_ASSEMBLE_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_MC_BUILD OFF)
set(LLVM_TOOL_LLVM_MC_DISASSEMBLE_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_MICROSOFT_DEMANGLE_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_ML_BUILD OFF)
set(LLVM_TOOL_LLVM_MODEXTRACT_BUILD OFF)
set(LLVM_TOOL_LLVM_MT_BUILD OFF)
set(LLVM_TOOL_LLVM_NM_BUILD OFF)
set(LLVM_TOOL_LLVM_OBJCOPY_BUILD OFF)
set(LLVM_TOOL_LLVM_OBJDUMP_BUILD OFF)
set(LLVM_TOOL_LLVM_OPT_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_OPT_REPORT_BUILD OFF)
set(LLVM_TOOL_LLVM_PDBUTIL_BUILD OFF)
set(LLVM_TOOL_LLVM_PROFDATA_BUILD OFF)
set(LLVM_TOOL_LLVM_PROFGEN_BUILD OFF)
set(LLVM_TOOL_LLVM_RC_BUILD OFF)
set(LLVM_TOOL_LLVM_READOBJ_BUILD OFF)
set(LLVM_TOOL_LLVM_READTAPI_BUILD OFF)
set(LLVM_TOOL_LLVM_REDUCE_BUILD OFF)
set(LLVM_TOOL_LLVM_REMARKUTIL_BUILD OFF)
set(LLVM_TOOL_LLVM_RTDYLD_BUILD OFF)
set(LLVM_TOOL_LLVM_SHLIB_BUILD OFF)
set(LLVM_TOOL_LLVM_SIM_BUILD OFF)
set(LLVM_TOOL_LLVM_SIZE_BUILD OFF)
set(LLVM_TOOL_LLVM_SPECIAL_CASE_LIST_FUZZER_BUILD OFF)
set(LLVM_TOOL_LLVM_SPLIT_BUILD OFF)
set(LLVM_TOOL_LLVM_STRESS_BUILD OFF)
set(LLVM_TOOL_LLVM_STRINGS_BUILD OFF)
set(LLVM_TOOL_LLVM_SYMBOLIZER_BUILD OFF)
set(LLVM_TOOL_LLVM_TLI_CHECKER_BUILD OFF)
set(LLVM_TOOL_LLVM_UNDNAME_BUILD OFF)
set(LLVM_TOOL_LLVM_XRAY_BUILD OFF)
set(LLVM_TOOL_LTO_BUILD OFF)
set(LLVM_TOOL_OBJ2YAML_BUILD OFF)
set(LLVM_TOOL_OPT_BUILD OFF)
set(LLVM_TOOL_OPT_VIEWER_BUILD OFF)
set(LLVM_TOOL_REMARKS_SHLIB_BUILD OFF)
set(LLVM_TOOL_REDUCE_CHUNK_LIST_BUILD OFF)
set(LLVM_TOOL_SANCOV_BUILD OFF)
set(LLVM_TOOL_SANSTATS_BUILD OFF)
set(LLVM_TOOL_VERIFY_USELISTORDER_BUILD OFF)
set(LLVM_TOOL_VFABI_DEMANGLE_FUZZER_BUILD OFF)

if(FALSE)
# To use the submodule, set `-D FETCHCONTENT_SOURCE_DIR_SMLNJ_LLVM=runtime/llvm21`

FetchContent_Declare(
    smlnj_llvm
    GIT_REPOSITORY "https://github.com/smlnj/smlnj-llvm-21.1.git"
    GIT_TAG        6e331df8c0ad9eab4b98e04ae9db7af60f5aa976
)

FetchContent_MakeAvailable(smlnj_llvm)
endif()

add_subdirectory(runtime)
